tests/NormalTests/paczka1/small_fuzzy/53173532.err
Error in line 3: eXZf S866 6,3
Error in line 4: itKStV6n A694 51,2
Error in line 7: eXZf A707 46,9
